--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -369,7 +369,7 @@ Save the sequence in an object called `x`.
 # To store a sequence in the object `m` that starts at 32 and ends at 99 we type:
 m <- 32:99
 
-# Determining the length of object `m`
+# To determine the length of object `m` we type:
 length(m)
 
 # Store a sequence in the object `x` that starts at 12 and ends at 73:
@@ -745,7 +745,6 @@ type: PlainMultipleChoiceExercise
 lang: r
 xp: 0
 skills: 1
-key: d596636416
 ```
 This is the end of the programming assignment for this section. 
 
