--- a/chapter2.Rmd
+++ b/chapter2.Rmd
@@ -142,9 +142,9 @@ p <- murders$population
 # To determine the class of object `p` we use this code:
 class(p)
 
-# Use the accessor to extract state abbreviations and assign it to `a`
+# Use the accessor to extract state abbreviations and assign it to a
 
-# Determine the class of `a`
+# Determine the class of a
 
 ```
 
@@ -154,13 +154,13 @@ class(p)
 # To access the population variable from the murders dataset use this code:
 m <- murders$population 
 
-# To determine the class of object `m` we use this code:
+# To determine the class of object m we use this code:
 class(m)
 
-# Use the accessor to extract state abbreviations and assign it to `a`
+# Use the accessor to extract state abbreviations and assign it to a
 a <- murders$abb 
 
-# Determine the class of `a`
+# Determine the class of a
 class(a)  
 ```
 
@@ -217,7 +217,7 @@ o <- murders[["population"]]
 # We can confirm these two are the same
 identical(o, p)
 
-# Use square brackets to extract `abb` from `murders` and assign it to `b`
+# Use square brackets to extract `abb` from `murders` and assign it to b
 
 # Check if `a` and `b` are identical 
 
