--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -442,6 +442,9 @@ seq(7, 49, 7)
 
 `@solution`
 ```{r}
+# Create a vector with the multiples of 7, smaller than 50. 
+seq(7, 49, 7) 
+
 # Create a vector containing all the positive odd numbers smaller than 100.
 seq(1, 100, 2)
 
@@ -457,7 +460,21 @@ success_msg("Awesome! Let us 'jump' to the next exercise.")
 ---
 ## Sequences and length 
 
-Here, we're just looking to use two commands that we've just used in the previous questions. The `seq` command will generate the sequence and the `length` command will tell you how many numbers the list has. 
+The second argument of the function `seq` is actually a maximum not necessarily the end. So if we type
+
+```{r}
+seq(7, 50, 7)
+```
+
+we actually get the same vector of integers as if we type
+
+```{r}
+seq(7, 49, 7)
+```
+
+This can be useful becuase sometimes all we want are sequential numbers  that are smaller than some value. 
+
+Let's look at an example.
 
 ```yaml
 type: NormalExercise
@@ -482,12 +499,29 @@ Use `length` and then `seq` within parentheses.
 
 `@sample_code`
 ```{r}
+# We can a vector with the multiples of 7, smaller than 50 like this 
+seq(7, 49, 7) 
+
+# But note that the second argument does not need to be last number.
+# It simply determines the maximun value permited.
+# so the following line of code produces the same vector as seq(7, 49, 7)
+seq(7, 50, 7)
+
 # Create a sequence of numbers from 6 to 55, with 4/7 increments and determine its length
+
 
 ```
 
 `@solution`
 ```{r}
+# We can a vector with the multiples of 7, smaller than 50 like this 
+seq(7, 49, 7) 
+
+# But note that the second argument does not need to be last number.
+# It simply determines the maximun value permited.
+# so the following line of code produces the same vector as seq(7, 49, 7)
+seq(7, 50, 7)
+
 # Create a sequence of numbers from 6 to 55, with 4/7 increments and determine its length
 length(seq(6, 55, 4/7))
 
@@ -501,9 +535,20 @@ success_msg("Great job! Looks like you're getting good with sequences!")
 ```
 
 ---
-## Sequences and class
+## Sequences of certain length
 
-We've already learned how to define the `class` of an object. Let`s do the same for a sequence we generate. 
+The `sequence` function has another useful argument. The argument *length.out*. This argument let's us generate sequences that are increasing by the same amount but are of the prespecified length. 
+
+For example, this line of code 
+
+```{r}
+x <- seq(0, 100, length.out = 5)
+```
+
+produces the numbers 0, 25, 50, 75, 100. 
+
+Let's create a vector and see what is the class of the object produced. 
+
 
 ```yaml
 type: NormalExercise
@@ -515,8 +560,8 @@ skills: 1
 
 
 `@instructions`
-We will define the class of a particular object. 
-Specifically, what is the class of the following object `a <- seq(1, 10, 0.5)`?
+- We will define the class of a vector generated with `seq` using the *length.out* argument. 
+- Specifically, what is the class of the following object `a <- seq(1, 10, length.out = 100)`?
 
 `@hint`
 Create the sequence, store it in an object, then check the class.
@@ -539,7 +584,7 @@ Create the sequence, store it in an object, then check the class.
 `@solution`
 ```{r}
 # Store the sequence in the object a
-a <- seq(1, 10, 0.5)
+a <- seq(1, 10, length.out = 100)
 
 # Determine the class of a
 class(a)
@@ -557,12 +602,12 @@ success_msg("Good job! Let us move on to the next exercise!")
 ---
 ## Integers
 
-We have discussed the *numeric* class. We just saw it in our previous exercise by examining
+We have discussed the *numeric* class. We just saw that the `seq` function can generate objects of this class. For another example type 
 
 ```{r}
 class(seq(1, 10, 0.5))
 ```
-and noting the `class` is *numeric*. R has another type of vector we have not described, the integers. You can create an *integer* by adding the letter `L` after a whole number. If you type
+into the console and note that the `class` is *numeric*. R has another type of vector we have not described, the *integer* class. You can create an *integer* by adding the letter `L` after a whole number. If you type
 
 ```{r}
 class(3L)
@@ -573,6 +618,7 @@ in the console, you see this is an *integer* and not a *numeric*. For most  prac
 ```{r}
 3L - 3
 ```
+
 The main difference is that integers occupy less space in the computer memory, so for big computations using integers can have a substantial impact.
 
 
@@ -639,11 +685,10 @@ skills: 1
 
 
 `@instructions`
-Does this change depending on what we store in an object?
 Confirm that the `class` of `1` is *numeric* and the `class` of `1L` is *integer*.
 
 `@hint`
-Just type `class` and `1L`. 
+Just call the function `class` with `1L` as an argument.
 
 `@pre_exercise_code`
 ```{r}
@@ -661,6 +706,9 @@ class(1)
 
 `@solution`
 ```{r}
+# Check the class of 1, assigned to the object a
+class(1)
+
 # Confirm the class of 1L is integer
 class(1L)
 
@@ -693,13 +741,13 @@ skills: 1
 
 
 `@instructions`
-Define the following vector:
+- Define the following vector:
 
 ```{r}
 x <- c("1", "3", "5")
 ```
 
-And coerce it to get integers using the `as.integer()` function.
+- Coerce `x` to get integers using the `as.integer()` function.
 
 `@hint`
 Make sure you put the numbers within "". 
@@ -745,7 +793,6 @@ type: PlainMultipleChoiceExercise
 lang: r
 xp: 0
 skills: 1
-key: d596636416
 ```
 This is the end of the programming assignment for this section. 
 
