--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -29,7 +29,7 @@ data(murders)
 `@sample_code`
 ```{r}
 # Store the murder rate per 100,000 for each state, in `murder_rate`
-
+murder_rate <- murders$total / murders$population * 100000
 
 # Store the `murder_rate < 1` in `low` 
 ```
@@ -46,7 +46,6 @@ low <- murder_rate < 1
 `@sct`
 ```{r}
 test_error()
-test_object("murder_rate", undefined_msg = "Define the murder rate first!", incorrect_msg = "Check the formula.")
 test_object("low", undefined_msg = "Define low!", incorrect_msg = "It should be murder rates less than 1.")
 success_msg("Great job!")
 ```
@@ -64,11 +63,8 @@ xp: 100
 skills: 1
 ```
 
-
-
 `@instructions`
-We've stored the *murders* object in memory.
-Use the results from the previous exercise and the function `which` to determine the indices of `murder_rate` associated with values lower than 1.
+- Use the results from the previous exercise and the function `which` to determine the indices of `murder_rate` associated with values lower than 1.
 
 `@hint`
 `which` will return the TRUE logicals.
@@ -81,23 +77,25 @@ data(murders)
 
 `@sample_code`
 ```{r}
-# Store the murder rate per 100,000 for each state, in `murder_rate`
+# Store the murder rate per 100,000 for each state, in murder_rate
+murder_rate <- murders$total/murders$population*100000
 
 # Store the murder_rate < 1 in low 
+low <- murder_rate < 1
 
-# Use which(), to get the lowest value
+# Get the indeces of entries that are below 1
 
 ```
 
 `@solution`
 ```{r}
-# Store the murder rate per 100,000 for each state, in `murder_rate`
+# Store the murder rate per 100,000 for each state, in murder_rate
 murder_rate <- murders$total/murders$population*100000
 
-# Store the `murder_rate < 1` in `low` 
+# Store the murder_rate < 1 in low 
 low <- murder_rate < 1
 
-# Use which(), to get the lowest value
+# Get the indeces of entries that are below 1
 which(low)
 
 ```
@@ -105,14 +103,21 @@ which(low)
 `@sct`
 ```{r}
 test_error()
-test_object("murder_rate", undefined_msg = "Define the murder rate first!", incorrect_msg = "Formula is the same as the last question's.")
-test_object("low", undefined_msg = "Define low!", incorrect_msg = "Murder rates lower than 1.")
 test_function("which", incorrect_msg = "Use the command from the instructions.")
 success_msg("Awesome!")
 ```
 
 ---
 ## Ordering vectors
+
+Note that if we want to know which entries of a vector are lower than some values we can use code like this:
+
+```{r}
+small <- murders$population < 1000000
+murders$state[small]
+```
+
+The code above shows us the states with populations smaller than one million. 
 
 ```yaml
 type: NormalExercise
@@ -123,8 +128,7 @@ skills: 1
 ```
 
 `@instructions`
-Use the results from the previous exercise to report the names of the states with murder rates lower than 1, using the square brackets to retrieve the name of the states from the dataset. 
-For example: `food$cost[low]`, would give us the cost of food lower than 1. 
+- Use the results from the previous exercise to report the names of the states with murder rates lower than 1, using the square brackets to retrieve the name of the states from the dataset. 
 
 `@hint`
 
@@ -137,11 +141,11 @@ data(dslabs)
 
 `@sample_code`
 ```{r}
-# Store the murder rate per 100,000 for each state, in `murder_rate`
+# Store the murder rate per 100,000 for each state, in murder_rate
+murder_rate <- murders$total/murders$population*100000
 
-
-# Store the `murder_rate < 1` in `low` 
-
+# Store the murder_rate < 1 in low 
+low <- murder_rate < 1
 
 # Names of states with murder rates lower than 1
 
@@ -163,8 +167,6 @@ murders$state[low]
 `@sct`
 ```{r}
 test_error()
-test_object("murder_rate", undefined_msg = "Define the murder rate first!", incorrect_msg = "Check the formula.")
-test_object("low", undefined_msg = "Define low!", incorrect_msg = "Same as last question.")
 test_output_contains("murders$state[low]", incorrect_msg = "Follow code from example given!")
 success_msg("Good job!")
 ```
@@ -181,11 +183,17 @@ skills: 1
 
 
 `@instructions`
-Now extend the code from the previous exercises to report the states in the Northeast with murder rates lower than 1.
-We will use the `&` operator.
+Now we will extend the code from the previous exercises to report the states in the Northeast with murder rates lower than 1.
+- Define `low` as before.
+- Use the `&` operator to create a new object `ind` that is true when `low` is true and the state is in the Northeast
+- Use the brackets `[` and `ind` to show the state names that satisfy this condition
+
 
 `@hint`
-Use the previously defined logical vector low and the logical operator &.
+Use the previously defined logical vector `low` and the logical operator `&`. For states with less than 1 million it will be like this: 
+
+```{r}
+ind <- low & murders$population < 1000000
 
 `@pre_exercise_code`
 ```{r}
@@ -199,8 +207,9 @@ data(murders)
 murder_rate <- murders$total/murders$population*100000
 
 # Store the `murder_rate < 1` in `low` 
+low <- murder_rate < 1
 
-# States in the Northeast with murder rates lower than 1; store in 'ind'
+# Create a vector ind for states in the Northeast and with murder rates lower than 1. 
 
 # Names of states in `ind` 
 
@@ -227,7 +236,7 @@ murders$state[ind]
 test_error()
 test_object("murder_rate", undefined_msg = "Define murder rate", incorrect_msg = "Don't change anything, just run the code.")
 test_object("low", undefined_msg = "Define low!", incorrect_msg = "Same as previous exercise.")
-test_object("ind", undefined_msg = "Make sure to define ind first!", incorrect_msg = "Use code ind <- low & murders$region==Northeast.")
+test_object("ind", undefined_msg = "Make sure to define ind first!", incorrect_msg = 'Use code ind <- low & murders$region=="Northeast".')
 test_output_contains("murders$state[ind]", incorrect_msg = "Use [] to retrieve names.")
 success_msg("Wasn't that good! Let's move to the next one.")
 ```
@@ -245,7 +254,7 @@ skills: 1
 
 `@instructions`
 In a previous exercise we computed the murder rate for each state and the average of these numbers.
-How many states are below the average?
+- How many states are below the average?
 
 `@hint`
 
@@ -258,22 +267,23 @@ data(murders)
 
 `@sample_code`
 ```{r}
-# Store the murder rate per 100,000 for each state, in `murder_rate`
+# Store the murder rate per 100,000 for each state, in murder_rate
+murder_rate <- murders$total/murders$population*100000
 
 
-# Compute average murder rate and store in `avg` using `mean` 
+# Compute average murder rate and store in avg using `mean` 
 
 
-# How many states are < avg ? Check using sum 
+# How many states have murder rates below avg ? Check using sum 
 
 ```
 
 `@solution`
 ```{r}
-# Store the murder rate per 100,000 for each state, in `murder_rate`
+# Store the murder rate per 100,000 for each state, in murder_rate
 murder_rate <- murders$total/murders$population*100000
 
-# Compute average murder rate and store in `avg` using `mean` 
+# Compute average murder rate and store in avg using mean
 avg <-mean(murder_rate)
 
 # How many states are < avg ? Check using sum 
@@ -292,6 +302,8 @@ success_msg("Awesome!")
 ---
 ## Match
 
+In this exercise we use the `match` function to identify the states with abbreviations AK, MI, and IA. 
+
 ```yaml
 type: NormalExercise
 key: 26843a3448
@@ -302,11 +314,12 @@ skills: 1
 
 
 `@instructions`
-Use the `match` function to identify the states with abbreviations AK, MI, and IA. 
-Start by defining an index of the entries of `murders$abb` that match the three abbreviations, then use the `[` operator to extract the states.
+- Define a character vector with the abbreviations.
+- Start by defining an index of the entries of `murders$abb` that match the three abbreviations.
+- Use the `[` operator to extract the states.
 
 `@hint`
-
+Once you define `abbs <- c("AK", "MI", "IA")` you can then use match to figure out the indexes of where these appear with `ind <- match(abbs , murders$abb)`
 
 `@pre_exercise_code`
 ```{r}
@@ -316,7 +329,7 @@ data(murders)
 
 `@sample_code`
 ```{r}
-# Store the 3 abbreviations in abbs. (remember that they are character vectors)
+# Store the 3 abbreviations in abbs in a vector (remember that they are character vectors and need quotes)
 
 # Match the abbs to the murders$abb and store in ind
 
@@ -326,7 +339,7 @@ data(murders)
 
 `@solution`
 ```{r}
-# Store the 3 abbreviations in `abbs`. (remember that they are character vectors)
+# Store the 3 abbreviations in abbs in a vector (remember that they are character vectors and need quotes)
 abbs <- c("AK", "MI", "IA")
 
 # Match the abbs to the murders$abb and store in `ind`
@@ -368,11 +381,16 @@ skills: 1
 
 
 `@instructions`
-Use the `%in%` operator to create a logical vector that answers the following question.
 Which of the following are actual abbreviations: MA, ME, MI, MO, MU?
+- Define a character vector with the abbreviations MA, ME, MI, MO, MU.
+- Use the `%` operator to create a logical vectors that is TRUE when the abbreviation is in `murders$abb`.
 
 `@hint`
-Use code `abbs%in%murders$abb`. 
+Look at what this does: 
+```{r}
+states <- c("New York", "Houston")
+states%in%murders$state 
+```
 
 `@pre_exercise_code`
 ```{r}
@@ -385,16 +403,16 @@ data(murders)
 # Store the 5 abbreviations in `abbs`. (remember that they are character vectors)
 
 
-# Use the %in% command to compare to murders$abb
+# Use the %in% command to check if the entries of abbs are abbreviations in the the murders data frame
 
 ```
 
 `@solution`
 ```{r}
-# Store the 5 abbreviations in `abbs`. (remember that they are character vectors)
+# Store the 5 abbreviations in abbs. (remember that they are character vectors)
 abbs <- c("MA", "ME", "MI", "MO", "MU") 
 
-# Use the %in% command 
+# Use the %in% command to check if the entries of abbs are abbreviations in the the murders data frame
 abbs%in%murders$abb
 
 ```
@@ -419,11 +437,13 @@ skills: 1
 
 
 `@instructions`
-Extend the code you used in exercise seven to report the one entry that is not an actual abbreviation. 
-Use the `!` operator, which turns `FALSE` into `TRUE` and vice-versa, then which to obtain an index.
+We are again working with the characters `abbs <- c("MA", "ME", "MI", "MO", "MU")`
+
+- In a previous exercise we computed the index `abbs%in%murders$abbs`. Use `which` and the `!` operator to get the index of the entries of `abbs` that are **not** abbreviations.
+- Show the entries of `abbs` that are not actual abbreviations.
 
 `@hint`
-Use the code `ind <- which(!abbs%in%murders$abb)`. 
+Use the code `ind <- which(!abbs%in%murders$abb)` to get the index. Then you can use the `[` to extract the correct values of `abs`.
 
 `@pre_exercise_code`
 ```{r}
@@ -433,13 +453,12 @@ data(murders)
 
 `@sample_code`
 ```{r}
-# Store the 5 abbreviations in `abbs`. (remember that they are character vectors)
+# Store the 5 abbreviations in abbs. (remember that they are character vectors)
+abbs <- c("MA", "ME", "MI", "MO", "MU") 
 
+# Use the `which` command and `!` operator to find out which abbreviation are not actually part of the dataset and store in ind
 
-# Use the `which` command and `!` operator to find out which abbreviation is not actually part of the dataset and store in 'ind' 
-
-
-# Names of abbs in `ind`
+# What are the entries of abbs that are not actual abbreviations
 
 ```
 
@@ -459,7 +478,6 @@ abbs[ind]
 `@sct`
 ```{r}
 test_error()
-test_object("abbs", undefined_msg = "Define abbs!", incorrect_msg = "Check the 5 abbreviations from the instructions.")
 test_object("ind", undefined_msg = "Make sure you define ind first! ", incorrect_msg = "Use the which and ! codes." )
 test_output_contains("abbs[ind]", incorrect_msg = "Have you used square brackets?")
 success_msg("Awesome!")
