--- a/chapter7.Rmd
+++ b/chapter7.Rmd
@@ -4,13 +4,6 @@ description : Just as the name suggests, we're going to practice the basics of d
 ---
 ## dplyr
 
-```yaml
-type: NormalExercise
-key: 766d9c4eab
-lang: r
-xp: 100
-skills: 1
-```
 Load the `dplyr` package and the murders dataset.
 
 ```{r}
@@ -19,9 +12,23 @@ library(dslabs)
 data(murders)
 ```
 
+You can add columns using the `dplyr` function `mutate`. This function is aware of the column names and insider the function call you can them unquoted. Like this:
+
+```{r}
+murders <- mutate(murders, population_in_millions = population / 10^6)
+```
+
+```yaml
+type: NormalExercise
+key: 766d9c4eab
+lang: r
+xp: 100
+skills: 1
+```
+
 `@instructions`
-We will make use of the `dplyr` package now.
-Use the function `mutate` to add a murders column named `rate` with the per 100,000 murder rate.
+
+- Use the function `mutate` to add a murders column named `rate` with the per 100,000 murder rate. Make sure you redefine `murders` as done in the example code above.
 
 `@hint`
 Use code `murders <- mutate(murders, rate =  total / population * 100000)`.  
@@ -35,9 +42,12 @@ data(murders)
 
 `@sample_code`
 ```{r}
-# Loading the libraries
-library(dplyr)
+# Loading data
+library(murders)
 data(murders)
+
+# Loading dplyr
+library(dplyr)
 
 # Use mutate to add a column named rate and store in murders
 
@@ -45,11 +55,14 @@ data(murders)
 
 `@solution`
 ```{r}
-# Loading the libraries
-library(dplyr)
+# Loading data
+library(murders)
 data(murders)
 
-# Use mutate to add a rate column and store in `murders`
+# Loading dplyr
+library(dplyr)
+
+# Use mutate to add a column named rate and store in murders
 murders <- mutate(murders, rate =  total / population * 100000)
 ```
 
@@ -61,7 +74,9 @@ success_msg("Awesome! Let's learn another command with mutate.")
 ```
 
 ---
-## Mutate
+## mutate
+
+Note that if `rank(x)` gives you the ranks of `x` from lowest to highest, `rank(-x)` gives you the ranks from highest to lowest.
 
 ```yaml
 type: NormalExercise
@@ -73,7 +88,7 @@ skills: 1
 
 
 `@instructions`
-Use the function `mutate` again to add a column `rank` containing the rank, from highest to lowest murder rate. Note that if `rank(x)` gives you the ranks of `x` from lowest to highest, `rank(-x)` gives you the ranks from highest to lowest.
+- Use the function `mutate` to add a column `rank` containing the rank, from highest to lowest murder rate. Make sure you redeinfe murders.
 
 `@hint`
 Use the function rank and remember by default it ranks from lowest to highest.
@@ -83,32 +98,31 @@ Use the function rank and remember by default it ranks from lowest to highest.
 library(dplyr)
 library(dslabs)
 data(murders)
-rate =  (murders$total)/ (murders$population) * 100000
 ```
 
 `@sample_code`
 ```{r}
-# Loading the libraries
-library(dplyr)
-data(murders)
+# Note that if you want ranks from highest to lowest you can take the negative and then compute the ranks 
+x <- c(88, 100, 83, 92, 94)
+rank(-x)
 
 # Defining rate
 rate <-  murders$total/ murders$population * 100000
 
-# Use mutate to add a rate column, rank from highest to lowest and store in `murders`
+# Use mutate to add a rank column with the ranks of rate from highest to lowest and store in `murders`
 
 ```
 
 `@solution`
 ```{r}
-# Loading the libraries
-library(dplyr)
-data(murders)
+# Note that if you want ranks from highest to lowest you can take the negative and ten compute the ranks 
+x <- c(88, 100, 83, 92, 94)
+rank(-x)
 
 # Defining rate
 rate <-  murders$total/ murders$population * 100000
 
-# Use mutate to add a rate column, rank from highest to lowest and store in `murders`
+# Use mutate to add a rank column with the ranks of rate from highest to lowest and store in `murders`
 murders <- mutate(murders, rank = rank(-rate))
 ```
 
@@ -119,8 +133,75 @@ test_function("mutate")
 test_object("murders", incorrect_msg = "Remember, rank from highest to lowest.")
 success_msg("Good job!")
 ```
+
+---
+## select
+
+With `dplyr` we can use `select` to show only certain columns. For example with this code we would only show the states and population sizes:
+
+```{r}
+select(murders, state, population)
+```
+
+
+```yaml
+type: NormalExercise
+key: 0e7a94d0a3
+lang: r
+xp: 100
+skills: 1
+```
+
+
+`@instructions`
+- Use `filter` to define a new data frame `murders_south` with only states from the South. 
+- Use `select` to show the state names and abbreviations. Just show it, do not define a new object.
+`@hint`
+
+`@pre_exercise_code`
+```{r}
+library(dplyr)
+library(dslabs)
+data(murders)
+```
+
+`@sample_code`
+```{r}
+# Load dplyr
+library(dplyr)
+
+# Use filter to define a new data frame `murders_south` with only states from the South. 
+murders_south <- filter(murders, region == "South")
+
+# Use select to only show state names and abbreviations from murders_south
+
+```
+
+`@solution`
+```{r}
+# Load dplyr
+library(dplyr)
+
+# Use filter to define a new data frame `murders_south` with only states from the South. 
+murders_south <- filter(murders, region == "South")
+
+# Use select to only show state names and abbreviations from murders_south
+select(murders_south, state, abb)
+```
+
+`@sct`
+```{r}
+test_error()
+test_function("select")
+test_output_contains("select(murders_south, state, abb)", incorrect_msg = "You need to use select. The columns you want are state and abb.")
+success_msg("Now you know how to use select! Let's move on to filter")
+```
+
+
 ---
 ## filter
+
+The `dplyr` function `filter` is used to choose specific rows of the data frame to keep.
 
 ```yaml
 type: NormalExercise
@@ -133,8 +214,7 @@ skills: 1
 
 `@instructions`
 
-The `dplyr` function `filter` is used to select specific rows of the data frame to keep.
-Show the top 5 states with the highest murder rates. Do not change the murders dataset, just show the result.
+- Use `filter` to show the top 5 states with the highest murder rates. Do not change the murders dataset, just show the result. Note that you can filter based on the `rank` column.
 
 `@hint`
 ?filter
@@ -149,10 +229,6 @@ data(murders)
 
 `@sample_code`
 ```{r}
-# Loading the libraries
-library(dplyr)
-data(murders)
-
 # Add the necessary columns
 murders <- mutate(murders, rate = total/population * 100000, rank = rank(-rate))
 
@@ -162,10 +238,6 @@ murders <- mutate(murders, rate = total/population * 100000, rank = rank(-rate))
 
 `@solution`
 ```{r}
-# Loading the libraries
-library(dplyr)
-data(murders)
-
 # Add the necessary columns
 murders <- mutate(murders, rate = total/population * 100000, rank = rank(-rate))
 
@@ -183,6 +255,12 @@ success_msg("Great job!")
 ---
 ## filter with !=
 
+We can remove rows using the `!=` operator. For example to remove Florida we would do this:
+
+```{r}
+no_florida <- filter(murders, state != "Florida")
+```
+
 ```yaml
 type: NormalExercise
 key: 846dd29c6c
@@ -193,11 +271,11 @@ skills: 1
 
 
 `@instructions`
-Create a new data frame called `no_south` that removes states from the south.
-How many states are in this category? 
+- Create a new data frame called `no_south` that removes states from the South region.
+- How many states are in this category? You can use the function `nrow` for this.
 
 `@hint`
-Use filter and the != operator. You can use nrow to quickly get the number of rows of a data frame.
+Use filter and the `!=` operator. You can use `nrow` to quickly get the number of rows of a data frame.
 
 `@pre_exercise_code`
 ```{r}
@@ -208,22 +286,14 @@ data(murders)
 
 `@sample_code`
 ```{r}
-# Loading the libraries
-library(dplyr)
-data(murders)
-
-# Use filter to create a new data frame `no_south`
+# Use filter to create a new data frame no_south
 
 # Use nrow() to calculate the number of rows
 ```
 
 `@solution`
 ```{r}
-# Loading the libraries
-library(dplyr)
-data(murders)
-
-# Use filter to create a new data frame `no_south`
+# Use filter to create a new data frame no_south
 no_south <- filter(murders, region != "South" )
 
 # Number of states (rows) in this category 
@@ -243,6 +313,13 @@ success_msg("That's great! Let's move to the next exercise.")
 ---
 ## filter with %in%
 
+We can also use the `%in%` to filter with `dplyr`. For example you can see the data from New York and Texas like this:
+
+```{r}
+filter(murders, state %in% c("New York", "Texas"))
+```
+
+
 ```yaml
 type: NormalExercise
 key: 4e5d7ac60f
@@ -251,10 +328,9 @@ xp: 100
 skills: 1
 ```
 
-
 `@instructions`
-Create a new data frame called murders_nw with only the states from the northeast and the west. 
-How many states are in this category? 
+- Create a new data frame called `murders_nw` with only the states from the northeast and the west. 
+- How many states are in this category? 
 
 
 `@hint`
@@ -269,11 +345,7 @@ data(murders)
 
 `@sample_code`
 ```{r}
-# Loading the libraries
-library(dplyr)
-data(murders)
-
-# Create a new data frame called `murders_nw` with only the states from the northeast and the west
+# Create a new data frame called murders_nw with only the states from the northeast and the west
 
 # Number of states (rows) in this category 
 
@@ -281,12 +353,8 @@ data(murders)
 
 `@solution`
 ```{r}
-# Loading the libraries
-library(dplyr)
-data(murders)
-
-# Create a new data frame called `murders_nw` with only the states from the northeast and the west
-murders_nw <- filter(murders, region %in% c("Northeast", "West") )
+# Create a new data frame called murders_nw with only the states from the northeast and the west
+murders_nw <- filter(murders, region %in% c("Northeast", "West"))
 
 # Number of states (rows) in this category
 nrow(murders_nw)
@@ -303,7 +371,15 @@ test_output_contains("nrow(murders_nw)", incorrect_msg = "You need the number of
 success_msg("This is great!")
 ```
 ---
+
 ## filtering by two conditions
+
+Suppose you want to live in the Northeast or West **and** want the murder rate to be less than 1. We want to see the data for the states satisfying these options. Note that you can use logical operators with `filter`:
+
+```{r}
+filter(murders, population < 5000000 & region == "Northeast")
+```
+
 
 ```yaml
 type: NormalExercise
@@ -315,12 +391,12 @@ skills: 1
 
 
 `@instructions`
-Suppose you want to live in the Northeast or West and want the murder rate to be less than 1. 
-Create a table, call it `my_states`, that satisfies both these. 
-How many states satisfy this?
+- Add a murder rate and rate column as done before
+- Create a table, call it `my_states`, that satisfies both the conditions: it is in the Northeast or West and the murder rate is less than 1. 
+- Use select to show only the state name, the rank and the rate 
 
 `@hint`
-Use the `my_states <- filter(murders, region %in% c("Northeast", "West") & rate < 1)` code. 
+Use the `my_states <- filter(murders, region %in% c("Northeast", "West") & rate < 1)` code. Then use `select`. The columns you want are state, rate and rank.
 
 `@pre_exercise_code`
 ```{r}
@@ -331,46 +407,39 @@ data(murders)
 
 `@sample_code`
 ```{r}
-# Loading the libraries
-library(dplyr)
-data(murders)
-
 # add the rate column
-murders <- mutate(murders, rate =  total / population * 100000)
+murders <- mutate(murders, rate =  total / population * 100000, rank = (-rate))
 
-# Create a table, call it `my_states`, that satisfies both the conditions 
+# Create a table, call it my_states, that satisfies both the conditions 
 
-# Number of states (rows) in this category
-
+# Use select to show only the state name, the murder rate and the rank
 ```
 
 `@solution`
 ```{r}
-# Loading the libraries
-library(dplyr)
-data(murders)
-
 # add the rate column
-murders <- mutate(murders, rate =  total / population * 100000)
+murders <- mutate(murders, rate =  total / population * 100000, rank = (-rate))
 
 # Create a table, call it `my_states`, that satisfies both the conditions 
 my_states <- filter(murders, region %in% c("Northeast", "West") & rate < 1)
 
-# Number of states (rows) in this category
-nrow(my_states)
-
+# Use select to show only the state name, the murder rate and the rank
+select(my_states, state, rate, rank)
 ```
 
 `@sct`
 ```{r}
 test_error()
-test_function("mutate")
 test_function("filter")
 test_object("my_states", undefined_msg = "Define my_states first!", incorrect_msg = "Use the filter, %in% and < commands.")
-test_output_contains("nrow(my_states)", incorrect_msg = "You need the number of rows again, same as previous question.")
+test_output_contains("select(my_states, state, rate, rank)", incorrect_msg = "You need the use the select function. You want to see state, rate, and rank.")
 success_msg("Now you know how to combine functions and use them to get specific answers. Let's try it one more time!")
 ```
+
+
+
 ---
+
 ## Using the pipe %>%
 
 ```yaml
@@ -381,10 +450,35 @@ xp: 100
 skills: 1
 ```
 
+The pipe `%>%` can be used to perform operations sequentially without having to define intermediate objects. After redefining murder to include rate and rank
+
+```{r}
+library(dplyr)
+murders <- mutate(murders, rate =  total / population * 100000, rank = (-rate))
+```
+
+in the solution to the previous exercise we did the following:
+```{r}
+# Created a table, call it `my_states`, that satisfies both the required conditions 
+my_states <- filter(murders, region %in% c("Northeast", "West") & rate < 1)
+
+# Used select to show only the state name, the murder rate and the rank
+select(my_states, state, rate, rank)
+```
+
+The pipe permits us to performm both operation sequentially and without having to define a intermediate variable `my_states`
+
+For exmple we could have mutated and selected in the same line like this:
+
+```{r}
+mutate(murders, rate =  total / population * 100000, rank = (-rate)) %>% select(state, rate, rank)
+```
+
+Note that `select` no longer has a data frame as the first argument. The first argument is assumed to be the result of the operation before the `%>%`
 
 `@instructions`
-Repeat exercise 5, but now instead of creating a new object, show the result and only include the state, rate, and rank columns.
-Use a pipe (`%>%`) to do this in just one line.
+Repeat the previous exercice, but now instead of creating a new object, show the result and only include the state, rate, and rank columns.
+- Use a pipe `%>%` to do this in just one line.
 
 `@hint`
 Use code: `filter(murders, region %in% c("Northeast", "West") & rate < 1) %>% 
@@ -395,11 +489,13 @@ Use code: `filter(murders, region %in% c("Northeast", "West") & rate < 1) %>%
 library(dplyr)
 library(dslabs)
 data(murders)
-rate =  (murders$total)/ (murders$population) * 100000
 ```
 
 `@sample_code`
 ```{r}
+# Load library
+library(dplyr)
+
 ## Define the rate column
 murders <- mutate(murders, rate =  total / population * 100000, rank = rank(-rate))
 
@@ -436,11 +532,22 @@ skills: 1
 
 
 `@instructions`
-Now reload the original murders data frame using `data(murders)`. 
-Then use just one line to create a new data frame, called, `my_states` that has murder rate and rank column, consider only states in the Northeast or West, which have a murder rate lower than 1 and contain only the state, rate, and rank columns. 
+Now we will make murders the original table one gets when loading using `data(murders)`. 
+Use just one line to create a new data frame, called, `my_states` that has murder rate and rank column, consider only states in the Northeast or West, which have a murder rate lower than 1 and contain only the state, rate, and rank columns. The line should have four components
+separated by three `%>%`. 
+- The orginal dataset `murders`
+- A call to `mutate` to add the murder rate and the rank.
+- A call to `filter` to keep only the states from the Northeast or West and that have a murder rate below 1
+- A call to `select` that keeps only the columns with the stata name, the murder rate and the rank. 
+
+The line should look something like this `my_states <- murders %>%` mutate something `%>%` filter something `%>%` select something.
+
 
 `@hint`
-Use `mutate`, `filter` and `select` combining them with `pipes`.
+The following pieces of code should be joined by pipes:
+- `mutate(rate =  total / population * 100000, rank = rank(-rate))`
+- `filter(region %in% c("Northeast", "West") & rate < 1)`
+-  `select(state, rate, rank)`
 
 `@pre_exercise_code`
 ```{r}
@@ -455,7 +562,7 @@ data(murders)
 library(dplyr)
 data(murders)
 
-# Create new data frame called `my_states` (with specifications in the instructions)
+# Create new data frame called my_states (with specifications in the instructions)
 
 ```
 
@@ -465,7 +572,7 @@ data(murders)
 library(dplyr)
 data(murders)
 
-# Create new data frame called `my_states` (with specifications in the instructions)
+# Create new data frame called my_states (with specifications in the instructions)
 my_states <- murders %>% 
     mutate(rate =  total / population * 100000, rank = rank(-rate)) %>%
     filter(region %in% c("Northeast", "West") & rate < 1) %>%
